# blog-drf

./: .dockerignore  .gitignore  Dockerfile  example.docker-compose.yml  example.env  pyproject.toml
src/applications/authors/: models.py  serializers.py  tests.py  urls.py  views.py
src/applications/categories/: serializers.py  tests.py  urls.py  views.py
src/applications/categories/migrations/: 0001_initial.py
src/applications/comments/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/applications/comments/migrations/: 0001_initial.py  0002_comment_date.py
src/applications/common/: permissions.py
src/applications/jwt_auth/: apps.py  managers.py  serializers.py  tests.py  views.py
src/applications/jwt_auth/migrations/: 0001_initial.py
src/applications/posts/: filter.py  models.py  serializer.py  tests.py  toxicity_model.py  urls.py  views.py
src/applications/posts/migrations/: 0001_initial.py
src/applications/tags/: serializers.py  tests.py  urls.py  views.py
src/applications/tags/migrations/: 0001_initial.py
src/authors/: models.py  serializers.py  urls.py  views.py
src/authors/migrations/: 0001_initial.py
src/jwt_auth/: models.py  permissions.py  urls.py
src/jwt_auth/migrations/: 0001_initial.py
src/system/: settings.py  urls.py
